Archive2/b6/ad2ff0765a9959/output
main.cpp:2:11: error: missing 'typename' prior to dependent type name 'T::iterator'
void sort(T::iterator begin, T::iterator end){ ... }
          ^~~~~~~~~~~
          typename 
main.cpp:2:30: error: missing 'typename' prior to dependent type name 'T::iterator'
void sort(T::iterator begin, T::iterator end){ ... }
                             ^~~~~~~~~~~
                             typename 
main.cpp:2:48: error: expected expression
void sort(T::iterator begin, T::iterator end){ ... }
                                               ^
main.cpp:2:23: warning: unused parameter 'begin' [-Wunused-parameter]
void sort(T::iterator begin, T::iterator end){ ... }
                      ^
main.cpp:2:42: warning: unused parameter 'end' [-Wunused-parameter]
void sort(T::iterator begin, T::iterator end){ ... }
                                         ^
2 warnings and 3 errors generated.
