Archive2/b6/ad2ff0765a9959/main.cpp
template <typename T>
void sort(T::iterator begin, T::iterator end){ ... }